igt@dmabuf@all-tests* - incomplete - No warnings/errors
<6> [596.958866] [IGT] dmabuf: executing
<6> [596.987601] [IGT] dmabuf: starting subtest all-tests
<6> [596.990518] [IGT] dmabuf: starting dynamic subtest sanitycheck
<6> [596.998879] dma-buf: Running sanitycheck
<6> [597.078244] [IGT] dmabuf: finished subtest sanitycheck, SUCCESS
<6> [597.080685] [IGT] dmabuf: starting dynamic subtest dma_fence
<6> [597.086571] dma-buf: Running dma_fence
<6> [597.086590] sizeof(dma_fence)=64
<6> [597.087802] dma-buf: Running dma_fence/sanitycheck
<6> [597.088608] dma-buf: Running dma_fence/test_signaling
<6> [597.088670] dma-buf: Running dma_fence/test_add_callback
<6> [597.088717] dma-buf: Running dma_fence/test_late_add_callback
<6> [597.088764] dma-buf: Running dma_fence/test_rm_callback
<6> [597.088809] dma-buf: Running dma_fence/test_late_rm_callback
<6> [597.088854] dma-buf: Running dma_fence/test_status
<6> [597.088899] dma-buf: Running dma_fence/test_error
<6> [597.088944] dma-buf: Running dma_fence/test_wait
<6> [597.088994] dma-buf: Running dma_fence/test_wait_timeout
<6> [597.094417] dma-buf: Running dma_fence/test_stub
<6> [597.094487] dma-buf: Running dma_fence/race_signal_callback
<6> [597.222191] thread_signal_callback[0] completed 1291 passes, 36 misses
<6> [597.222349] thread_signal_callback[1] completed 1274 passes, 27 misses
<6> [597.286175] thread_signal_callback[0] completed 1446 passes, 1439 misses
<6> [597.287226] thread_signal_callback[1] completed 1457 passes, 1456 misses
<6> [597.371487] [IGT] dmabuf: finished subtest dma_fence, SUCCESS
<6> [597.373945] [IGT] dmabuf: starting dynamic subtest dma_fence_chain