dma-buf: Take a breath during dma-fence-chain subtests

Give the scheduler a chance to breath by calling cond_resched()
as some of the loops may take some time on old machines (like apl/bsw/pnv),
and so catch the attention of the watchdogs.

Closes: https://gitlab.freedesktop.org/drm/i915/kernel/-/issues/12904
Signed-off-by: Nitin Gote <nitin.r.gote@intel.com>